Modified Swaggers added routes to the room
